add middleware, emmet

--- a/__html__/index.html
+++ b/__html__/index.html
@@ -73,6 +73,21 @@
         app.data.items.push('Новий елемент');
     }
     
+    // Підписка на події
+    // app.on('change', ({ property, oldValue, newValue }) => {
+    //     console.log(`Змінено ${property}: ${oldValue} -> ${newValue}`);
+    // });
+
+    // Додавання middleware
+    // app.middleware.use(async (context, next) => {
+    //     // Валідація
+    //     if (context.property === 'counter' && context.newValue < 0) {
+    //         context.preventDefault = true;
+    //         return;
+    //     }
+    //     await next();
+    // });
+
     // Валідація
     // app.addValidator('username', value => value.length >= 3);
 
