--- a/__html__/index.html
+++ b/__html__/index.html
@@ -7,7 +7,7 @@
 <body>
 <div id="root">
 <h1>Counter</h1>
-    <div m-for="item in items">
+    <div data-for="item in items">
         Item: {{ item }}
     </div>
 
@@ -25,13 +25,13 @@
     <div><input class="text-center" type="text" data-model="counter"></div>
     <div>Статус: {{ status }}</div>
     <!-- Додаємо нові блоки з m-if -->
-    <div m-if="counter > 0">
+    <div data-if="counter > 0">
         Лічильник більший за нуль
     </div>
-    <div m-if="counter < 0">
+    <div data-if="counter < 0">
         Лічильник менший за нуль
     </div>
-    <div m-if="counter === 0">
+    <div data-if="counter === 0">
         Лічильник дорівнює нулю
     </div>
 
@@ -42,8 +42,9 @@
     </div>
 </div>
 <script type="module">
-    import Model from "../src/index.js";
+    import Model from "../dist/model.js";
     // Model.DEBUG = true;
+    Model.info()
     const app = new Model({
         items: ['Перший', 'Другий', 'Третій'],
         counter: 10,
