--- a/__html__/index.html
+++ b/__html__/index.html
@@ -7,9 +7,9 @@
 <body>
 <div id="root">
 <h1>Counter</h1>
-<!--    <div data-for="item in items">-->
-<!--        Item: {{ item }}-->
-<!--    </div>-->
+    <div data-for="item in items">
+        Item: {{ item }}
+    </div>
 
 <!--    <div>-->
 <!--        <p>Ім'я: {{ user.name }}-->
@@ -21,10 +21,10 @@
 <!--        <input type="text" data-model="user.name">-->
 <!--    </div>-->
 
-<!--    <ul>-->
-<!--        <li data-for="item in user.items">{{ item }}</li>-->
-<!--    </ul>-->
-<!--    -->
+    <ul>
+        <li data-for="item in user.items">{{ item }}</li>
+    </ul>
+    
     <div>Counter: {{ counter }}</div>
     <div><input class="text-center" type="text" data-model="counter"></div>
     <div>Статус: {{ status }}</div>
