--- a/__html__/index.html
+++ b/__html__/index.html
@@ -36,7 +36,7 @@
     <div class="m-2 d-flex flex-row gap-2">
         <button onclick="updateCounter('+')">+</button>
         <button onclick="updateCounter('-')">-</button>
-        <button onclick="updateArray()">Upd Array</button>
+        <button onclick="addItem()">Upd Array</button>
     </div>
     
 </div>
