split into modules

--- a/__html__/index.html
+++ b/__html__/index.html
@@ -26,6 +26,14 @@
         <p>Повна адреса: {{ fullAddress }}
     </div>
 
+    <hr/>
+    <ul>
+        <li data-in="key in data">
+            {{key}}: {{user[key]}}
+        </li>
+    </ul>
+    
+    <hr/>
     <div>
         <input type="text" data-model="user.name">
     </div>
