split into modules

--- a/__html__/index.html
+++ b/__html__/index.html
@@ -18,6 +18,7 @@
     <hr/>
     <img :src="path_to_image" alt="Изображение">
     <button :disabled="is_disabled">Кнопка</button>
+    <button onclick="enableButton()">Кнопка</button>
     <hr/>
     
     <div data-for="item in items">
