add events, diffs

--- a/__html__/index.html
+++ b/__html__/index.html
@@ -35,7 +35,7 @@
     <hr/>
     <ul>
         <li data-in="key in data">
-            {{key}}: {{user[key]}}
+            {{key}}: {{data[key]}}
         </li>
     </ul>
     
